--- a/.github/workflows/Auto compile with openwrt sdk.yml
+++ b/.github/workflows/Auto compile with openwrt sdk.yml
@@ -32,7 +32,7 @@ jobs:
       prerelease: ${{ steps.check_version.outputs.prerelease }}
     steps:
       - name: Checkout
-        uses: actions/checkout@4
+        uses: actions/checkout@main
         with:
           fetch-depth: 0
           ref: ${{ github.ref_name }}
@@ -100,7 +100,7 @@ jobs:
           sudo -E apt-get -qq clean
 
       - name: Checkout
-        uses: actions/checkout@4
+        uses: actions/checkout@main
         with:
           fetch-depth: 0
           ref: ${{ github.ref_name }}
